--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>20</title>
+  <title>32</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -19,7 +19,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">20</h1>
+      <h1 class="title">32</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -27,7 +27,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>20 tile!</strong></p>
+      <p class="game-intro">Is it possible to get to the <strong>32 tile?</strong></p>
       <a class="restart-button">New Game</a>
     </div>
 
@@ -77,11 +77,11 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is the official version of 20.
+    <strong class="important">Note:</strong> This site is the official version of 32.
     </p>
     <hr>
     <p>
-    Click here for <a href="http://meantriag.github.io" target="_blank">Mean Triag.</a>
+    Created by <a href="http://github.com/thereal23" target="_blank">TheReal23.</a>
     </p>
   </div>
 
